Fixed videos close icon  bug and home photo samples z-index bug

--- a/src/components/home-photo-samples/home-photo-samples.css
+++ b/src/components/home-photo-samples/home-photo-samples.css
@@ -16,8 +16,8 @@
 }
 .background {
   position: absolute;
-  z-index: 100;
   height: 100%;
+  z-index: -1;
   border-radius: 12px;
   grid-row: 2 / 3;
   background-color: var(--main-bg-color);
@@ -42,10 +42,8 @@
   grid-row: 1 / -1;
   display: flex;
   height: 100%;
-  z-index: 200;
   justify-content: space-between;
   align-items: center;
-  /* gap: 10rem; */
 }
 .content-container > * {
   flex: 1;
