--- a/src/components/what-happening-sidepopup/what-happening-sidepopup.css
+++ b/src/components/what-happening-sidepopup/what-happening-sidepopup.css
@@ -11,7 +11,7 @@
 }
 
 .popup-sidebar {
-  z-index: 999;
+  z-index: 9999;
   flex-shrink: 0;
   padding: 1.5rem 1.5rem;
   width: max-content;
